fix(style): adapt ui to be responsive on mobile

--- a/style.css
+++ b/style.css
@@ -171,21 +171,35 @@ a:has(img) {
 
 
 @media (max-width: 815px) {
+    
+    .card {
+        margin: 15px;
+    }
+    
+    .card-link {
+        display: flex;
+        width: 100%;
+        justify-content: space-evenly;  
+    }
+    
     .card-header {
         flex-direction: column;
         align-items: flex-start;
     }
+    
     .text-section {
         height: auto;
         min-height: 20vh;
         display: block;
         text-align: justify;
     }
-}
-
-/* Encore plus petit (mobile) */
-@media (max-width: 480px) {
-    body {
-        font-size: 16px;
+    
+    a.card-title {
+        display: none;
     }
+    
+    .me-pic {
+        display: none;
+    }
+    
 }
